--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <section class="first-container">
+        <section class="first-container">
         <div class="first-container__text">
             <p class="first-container__text_header">Bhromaon</p>
             <p class="first-container__text_header_second">Safe Travel Anywhere</p>
@@ -67,6 +68,11 @@
         <div class="third-container__image_second-picture">
             <img src="./img/WhyChooseButtom.png" width="350px" height="220px" alt="mountain">
         </div>
+       <a href="#"> <div class="third-container__scroll">
+            <p><i class="fas fa-chevron-circle-up"></i></p> 
+            
+         </div>
+        </a>
     </div>
     </section>
 
@@ -131,6 +137,10 @@
     </section>
 
     <section class="eighth-container"> 
+        <div class="eighth-container__scroll">
+            <p><i class="fas fa-chevron-up"></i></p> <p>  Scroll Up </p>
+            
+         </div>
             <div class="eighth-container__text">
                 <p class="eighth-container__text_header">Bhromaon</p>
                 <p class="eighth-container__text_text">Safe Travel Anywhere</p>
@@ -144,5 +154,6 @@
                 <a href="https://www.pinterest.com"><i class="fab fa-pinterest"></i></a>
             </div>
     </section>
+
 </body>
 </html>
